resources/css/style.css
h1.title {
  font-family: Verdana;
  font-weight: normal;
  font-size: 50px;
  color: white;
  text-align: center;
  margin: auto;
  
}

h1.yptg {
    font-size: 42px;
    font-weight: 300;
    font-family: Verdana;
    color: white;
}

.about_p {
    font-family: verdana;
    font-size: 21px;
    color: gray;
}

.dlink {
color: aquamarine;
font-size: 16px;
text-decoration: underline;
}

main {
    background-color: black;
    color: white;
    text-align: center;
    margin: 0%;
}

img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
  }

  .icon {
      height: 100px;
      width: auto;
      margin-left: auto;
      margin-right: auto;

  }

  .footer {
      color: gray;
      text-align: right;
      padding-top: 10px;
      font-size: 32px;
  }

  body {
      background-color: black;
      margin: 0%;
  }

